--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="0; url=https://coursera_html-css-and-javascript.github.io/module2-solution/index.html">
-  <title>Dummy</title>
+
 </head>
 <body>
-  
+  <p>test</p>
 </body>
 </html>
