fixed spacing and titles

--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -10,15 +10,15 @@
   <h1>Module 2 Solution</h1>
 
   <div class="row">
-    <div class="section col-lg col-md-1">
+    <div class="section col-lg-4 col-md-6">
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam eu lectus a sem consectetur faucibus. Integer convallis, ex eu bibendum aliquam, turpis nunc dapibus magna, sollicitudin faucibus tortor arcu in leo. Vestibulum euismod tincidunt mi, non semper massa aliquet nec. Nam purus lectus, sagittis sit amet rhoncus sed, posuere faucibus urna. Duis commodo laoreet enim, sed porta ex aliquam at. Vivamus vel feugiat purus. Quisque consequat augue nibh, sed euismod justo vehicula vel. Pellentesque faucibus rhoncus pharetra. Etiam venenatis enim ac pulvinar dignissim. Sed viverra ante ipsum, eget mollis odio mattis quis. Nullam vel tellus varius massa commodo lobortis.</p>
       <p id="title1">Section 1</p>
     </div>
-    <div class="section col-lg col-md-1">
+    <div class="section col-lg-4 col-md-6">
       <p>Vivamus id orci id augue facilisis aliquam. Maecenas posuere ante eros, id lobortis lacus euismod id. Nulla varius vehicula est ac lobortis. Sed varius risus quis aliquam mollis. Fusce vel neque vel lacus elementum placerat sed at urna. Donec eu justo condimentum, pharetra ligula sed, commodo felis. Nunc ullamcorper, eros at euismod dictum, est felis pulvinar orci, non varius diam dolor sed turpis. Pellentesque in ultrices ex. Nunc nec metus vel metus molestie malesuada at nec erat. Cras eu lorem arcu. Donec id lacinia lorem. Morbi dictum sit amet quam quis eleifend. Aliquam erat volutpat. Vivamus massa leo, pulvinar a luctus vel, dapibus eu orci.</p>
       <p id="title2">Section 2</p>
     </div>
-    <div class="section col-lg col-md-2">
+    <div class="section col-lg-4 col-md-12">
       <p>Sed dictum et lectus at consectetur. Vestibulum vel nunc ut enim posuere dictum. Duis porttitor turpis et quam ultricies, fermentum ornare ligula ultrices. Ut molestie sem eu pellentesque convallis. Sed odio tellus, porttitor id dictum sit amet, suscipit sed ante. Integer vitae augue fringilla, maximus justo vitae, tincidunt metus. Mauris turpis sapien, viverra a luctus sed, vulputate sed lectus. Nam in nibh semper, tincidunt nunc nec, porta eros.</p>
       <p id="title3">Section 3</p>
     </div>
