--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -21,12 +21,22 @@
 
   <div class="container">
     <div class="row">
-      <h1 id="menu">Our Menu</h1>
+      <h1 class="menu">Our Menu</h1>
     </div>
 
-    <div class="row">
-      <h2>Chicken</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam dignissim nulla quis tellus vulputate, quis tincidunt neque commodo. Nam consequat posuere congue. In hac habitasse platea dictumst. Morbi at ultrices nisi, sed mollis eros. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent id malesuada tortor, et varius libero. Aenean lectus lectus, tempor ut iaculis non, rutrum et urna. Fusce et lectus neque. Cras sit amet feugiat mauris, id accumsan risus. Vivamus eleifend sem et mauris malesuada convallis.</p>
+    <div class="row menu-section">
+      <h2 class="menu-category">Chicken</h2>
+      <p class="menu-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam dignissim nulla quis tellus vulputate, quis tincidunt neque commodo. Nam consequat posuere congue. In hac habitasse platea dictumst. Morbi at ultrices nisi, sed mollis eros. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent id malesuada tortor, et varius libero. Aenean lectus lectus, tempor ut iaculis non, rutrum et urna. Fusce et lectus neque. Cras sit amet feugiat mauris, id accumsan risus. Vivamus eleifend sem et mauris malesuada convallis.</p>
+    </div>
+
+    <div class="row menu-section">
+      <h2 class="menu-category">Beef</h2>
+      <p class="menu-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam dignissim nulla quis tellus vulputate, quis tincidunt neque commodo. Nam consequat posuere congue. In hac habitasse platea dictumst. Morbi at ultrices nisi, sed mollis eros. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent id malesuada tortor, et varius libero. Aenean lectus lectus, tempor ut iaculis non, rutrum et urna. Fusce et lectus neque. Cras sit amet feugiat mauris, id accumsan risus. Vivamus eleifend sem et mauris malesuada convallis.</p>
+    </div>
+
+    <div class="row menu-section">
+      <h2 class="menu-category">Sushi</h2>
+      <p class="menu-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam dignissim nulla quis tellus vulputate, quis tincidunt neque commodo. Nam consequat posuere congue. In hac habitasse platea dictumst. Morbi at ultrices nisi, sed mollis eros. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent id malesuada tortor, et varius libero. Aenean lectus lectus, tempor ut iaculis non, rutrum et urna. Fusce et lectus neque. Cras sit amet feugiat mauris, id accumsan risus. Vivamus eleifend sem et mauris malesuada convallis.</p>
     </div>
   </div>
 
