--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -3,18 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/styles.css">
   <title>Module 3 Solution</title>
 </head>
 
 <body>
-  <header>
     <nav id="header-nav" class="navbar navbar-default">
       <div class="container">
         <div class="navbar-header">
-          <a href="index.html"><h1>Restaurant name</h1></a>
-
+          <div class="navbar-brand">
+            <a href="index.html"><h1>Food, LLC</h1></a>
+          </div>
+  
           <!--nav button--> 
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
@@ -22,27 +23,32 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-
         </div>
+
+        <!--collapsable nav--> 
+        <div id="collapsable-nav" class="navbar-collapse collapse">
+          <ul id="nav-list" class="nav navbar-nav">
+            <li class="visible-xs">
+              <a href="#chicken">Chicken</a>
+            </li>
+            <li class="visible-xs">
+              <a href="#beef">Beef</a>
+            </li>
+            <li class="visible-xs">
+              <a href="#sushi">Sushi</a>
+            </li>
+          </ul>
+        </div>
+
       </div>
     </nav>
-  </header>
 
-  <!--collapsable nav--> 
-  <div id="collapsable-nav" class="collapse navbar-collapse">
-    <ul id="nav-list" class="nav navbar-nav">
-      <li class="visible-md visible-sm"><a href="#chicken">Chicken</a></li>
-      <li class="visible-md visible-sm"><a href="#beef">Beef</a></li>
-      <li class="visible-md visible-sm"><a href="#sushi">Sushi</a></li>
-    </ul>
-  </div>
-  
   <div class="container">
-    <div class="row col-x-12">
+    <div class="col-xs-12">
       <h1 class="menu">Our Menu</h1>
     </div>
 
-    <div class="row menu-section col-x-12">
+    <div class="menu-section col-xs-12">
       <h2 id="chicken" class="menu-category">Chicken</h2>
       <p class="menu-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam dignissim nulla quis tellus vulputate, quis tincidunt neque commodo. Nam consequat posuere congue. In hac habitasse platea dictumst. Morbi at ultrices nisi, sed mollis eros. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent id malesuada tortor, et varius libero. Aenean lectus lectus, tempor ut iaculis non, rutrum et urna. Fusce et lectus neque. Cras sit amet feugiat mauris, id accumsan risus. Vivamus eleifend sem et mauris malesuada convallis.
         <br><br>
@@ -50,7 +56,7 @@
       </p>
     </div>
 
-    <div class="row menu-section col-x-12">
+    <div class="menu-section col-xs-12">
       <h2 id="beef" class="menu-category">Beef</h2>
       <p class="menu-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam dignissim nulla quis tellus vulputate, quis tincidunt neque commodo. Nam consequat posuere congue. In hac habitasse platea dictumst. Morbi at ultrices nisi, sed mollis eros. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent id malesuada tortor, et varius libero. Aenean lectus lectus, tempor ut iaculis non, rutrum et urna. Fusce et lectus neque. Cras sit amet feugiat mauris, id accumsan risus. Vivamus eleifend sem et mauris malesuada convallis.
         <br><br>
@@ -58,7 +64,7 @@
       </p>
     </div>
 
-    <div class="row menu-section col-x-12">
+    <div class="menu-section col-xs-12">
       <h2 id="sushi" class="menu-category">Sushi</h2>
       <p class="menu-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam dignissim nulla quis tellus vulputate, quis tincidunt neque commodo. Nam consequat posuere congue. In hac habitasse platea dictumst. Morbi at ultrices nisi, sed mollis eros. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent id malesuada tortor, et varius libero. Aenean lectus lectus, tempor ut iaculis non, rutrum et urna. Fusce et lectus neque. Cras sit amet feugiat mauris, id accumsan risus. Vivamus eleifend sem et mauris malesuada convallis.
         <br><br>
@@ -68,8 +74,7 @@
   </div>
 
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script src="js/jquery-2.1.4.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
